src/objects/Avalon_Guest_Card__c.object
<CustomObject>
    <fields>
        <fullName>Baths__c</fullName>
        <label>Baths</label>
        <precision>2</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <label>Bedrooms</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CellPhone__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityConsultantName__c</fullName>
        <formula>CommunityConsultant__r.LeasingAssociateName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Consultant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityConsultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Consultant</label>
        <referenceTo>MRILeasingAssociate__c</referenceTo>
        <relationshipLabel>Avalon Guest Cards</relationshipLabel>
        <relationshipName>Avalon_Guest_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LeaseTermDesired__c</fullName>
        <label>Lease Term Desired</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MarketingSource__c</fullName>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Affordable Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apt Guide/ASG PRINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apt Showcase PRINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AptFndr/AptMag PRINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AvalonCommMobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVB Company Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVB SisterCommRefer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail/Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Rent Mag PRINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-4Walls.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-Apartments.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-AptFinder.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-AptGuide.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-AptMarketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-AptSearch.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-AptShowcase.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-Craigslist.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-ForRent.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-Hotpads.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-Internet Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-Local Searches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-Move.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-MyNewPlace.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-Oodle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-Rent.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT-RentJungle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MostImportantFeatures__c</fullName>
        <label>What features are most important?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MoveInDate__c</fullName>
        <label>When will you be moving in?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtherCommunities__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other communities are you considering?</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Avalon Guest Cards</relationshipLabel>
        <relationshipName>Avalon_Guest_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OtherResidents__c</fullName>
        <label>Other Residents</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PetTypeBreed__c</fullName>
        <label>If yes, pet type and breed?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have a pet other than a service animal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriceRangeDesired__c</fullName>
        <label>Price Range Desired?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonForRelocating__c</fullName>
        <label>Reason for Relocating</label>
        <picklist>
            <picklistValues>
                <fullName>Affordable Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amenities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apt Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVB Reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Appearance/Qlty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate/Seasonal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fam Stat/Rmmt Chg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floorplan/Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Relocate/New Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location/Convenience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selling Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer - Diff Comm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer - Same Comm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value for Amount Paid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Address Street 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_most_important_to_you__c</fullName>
        <label>What is most important to you?</label>
        <picklist>
            <picklistValues>
                <fullName>Expected Move In Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WorkPhone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Avalon Guest Card</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Email__c</columns>
        <columns>MarketingSource__c</columns>
        <columns>Bedrooms__c</columns>
        <columns>Baths__c</columns>
        <columns>CommunityConsultantName__c</columns>
        <columns>MoveInDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACG-{00000}</displayFormat>
        <label>Avalon Guest Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avalon Guest Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>